<resources>
    <string name="app_name">Hi Gallery</string>
    <string name="main_title">Hi Gallery</string>
    <string name="settings_title">Settings</string>
    <string name="vault_title">Vault Album</string>
    <string name="trash_title">Trash</string>

    <string name="main_appbar_camera">Open Camera</string>
    <string name="main_appbar_vault">Vault</string>
    <string name="main_appbar_delete_selected">Delete</string>
    <string name="main_appbar_vault_selected">Move to Vault</string>
    <string name="main_appbar_new_album_selected">New album</string>
    <string name="main_appbar_generate_gif_selected">Generate GIF</string>
    <string name="main_appbar_select_all">Select all</string>
    <string name="main_appbar_deselect">Deselect</string>
    <string name="main_dialog_new_album_title">Album name:</string>
    <string name="main_toast_move_to_vault_done">Moved to vault</string>
    <string name="main_toast_move_to_vault_failed">Move to vault failed!</string>
    <string name="main_toast_generate_gif_done">Generated GIF done</string>
    <string name="main_toast_generate_gif_failed">Generated GIF failed!</string>
    <string name="main_toast_generate_gif_invalid_number">Invalid number of images!</string>

    <string name="navigation_photos">Photos</string>
    <string name="navigation_album">Album</string>
    <string name="navigation_favorite">Favorites</string>

    <string name="settings_language_title">Language</string>
    <string name="settings_language_subtitle">English</string>
    <string name="settings_language_action">Switch to Vietnamese</string>
    <string name="settings_darktheme_title">Dark theme</string>
    <string name="settings_auto_clean_title">Auto clean trash</string>
    <string name="settings_auto_clean_menu_0">Off</string>
    <string name="settings_auto_clean_menu_1">30 days</string>
    <string name="settings_auto_clean_menu_2">90 days</string>
    <string name="settings_auto_clean_menu_3">1 minute</string>
    <string name="settings_about_title">About</string>
    <string name="settings_grid_type_title">Grid type</string>
    <string name="settings_grid_type_menu_0">4 columns</string>
    <string name="settings_grid_type_menu_1">6 columns</string>
    <string name="settings_grid_type_menu_2">8 columns</string>
    <string name="settings_delete_duplicates_title">Delete duplicated images</string>
    <string name="settings_delete_duplicates_start">Start to find duplicates…</string>
    <string name="find_duplicates_result_content">Detected %1$d duplicate images! Tap to delete.</string>
    <string name="find_duplicates_not_detected_content">No duplicate images detected.</string>
    <string name="delete_duplicates_done">Deleted duplicated images!</string>

    <string name="login_vault_title">Vault Album</string>
    <string name="login_vault_subtitle">Please enter your passcode.</string>
    <string name="login_vault_password_incorrect">Incorrect. Please try again!</string>
    <string name="login_vault_forgot">Forgot</string>
    <string name="login_vault_delete">Del</string>
    <string name="login_vault_forgot_message">A password reset link was sent to your email!</string>

    <string name="signup_vault_title">Welcome to Vault!</string>
    <string name="signup_vault_label_email">Email</string>
    <string name="signup_vault_label_password">PIN (6 digits)</string>
    <string name="signup_vault_label_confirm_password">Confirm PIN</string>
    <string name="signup_vault_btn_restore">Restore</string>
    <string name="signup_vault_btn_signup">Start</string>
    <string name="signup_vault_invalid_email">Invalid email. Please enter again!</string>
    <string name="signup_vault_email_exists">Email exists. Maybe restore!</string>
    <string name="signup_vault_not_found">Email does not exists. Maybe start</string>
    <string name="signup_vault_pin_not_match">PINs do not match. Please retype!</string>
    <string name="signup_vault_pin_too_short">PIN length is 6. Please enter again!</string>
    <string name="signup_vault_unknown_error">Unknown error. Please try again!</string>
    <string name="restore_vault_wrong_pin">Wrong PIN. Please enter again!</string>

    <string name="photo_edit">Edit</string>
    <string name="photo_details">Details</string>
    <string name="photo_secure">Move to Vault</string>
    <string name="photo_set_as">Set as</string>
    <string name="photo_new_album">New album</string>
    <string name="photo_share">Share to…</string>
    <string name="photo_favorite">Favorite</string>
    <string name="photo_unfavorite">Unfavorite</string>
    <string name="photo_delete">Delete</string>
    <string name="photo_slideshow">Slideshow</string>
    <string name="photo_toast_edit_gif">Cannot edit GIF image!</string>

    <string name="photo_share_title">Share via</string>

    <string name="photo_details_name">Name:</string>
    <string name="photo_details_size">Size:</string>
    <string name="photo_details_path">Path:</string>
    <string name="photo_details_resolution">Resolution:</string>
    <string name="photo_details_last_modified">Last modified:</string>
    <string name="photo_details_close">Close</string>

    <string name="vault_revert">Revert to gallery</string>

    <string name="dialog_vault_close_btn_title">Close</string>
    <string name="dialog_vault_reset_btn_title">Reset</string>
    <string name="trash_delete">Delete</string>
    <string name="trash_restore">Restore</string>
    <string name="trash_delete_all">Delete All</string>
    <string name="trash_restore_all">Restore All</string>


    <string name="edit_save_message_dialog">Do you want to save this image to the gallery?</string>
    <string name="edit_back_message_dialog">The image has not been saved, do you want to save it?</string>
    <string name="edit_save_action_dialog">SAVE</string>
    <string name="edit_save_new_action_dialog">SAVE NEW</string>
    <string name="edit_yes_dialog">YES</string>
    <string name="edit_no_dialog">NO</string>
    <string name="edit_cancel_action_dialog">CANCEL</string>

    <string name="edit_filters_tooltip">Filters</string>
    <string name="edit_addText_tooltip">Add Text</string>
    <string name="edit_rotate_tooltip">Rotate</string>
    <string name="edit_flip_tooltip">Flip</string>

    <string name="edit_black_and_white_tooltip">B&amp;W</string>
    <string name="edit_negative_tooltip">Negative</string>
    <string name="edit_brightness_tooltip">Brightness</string>
    <string name="edit_temperature_tooltip">Temperature</string>

    <string name="edit_increase_tooltip">Increase</string>
    <string name="edit_decrease_tooltip">Decrease</string>

    <string name="edit_left_rotate_tooltip">Rotate left</string>
    <string name="edit_right_rotate_tooltip">Rotate right</string>
    <string name="edit_custom_rotate_tooltip">Custom</string>
    <string name="edit_done_custom_rotate_tooltip">Done</string>

    <string name="edit_horizontal_flip_tooltip">Horizontal</string>
    <string name="edit_vertical_flip_tooltip">Vertical</string>

    <string name="set_wall_title">Set wallpaper</string>
    <string name="set_wall_home_button">Home screen</string>
    <string name="set_wall_lock_button">Lock screen</string>
    <string name="set_wall_both_button">Both</string>

    <string name="get_insta_title">Instagram Images</string>
    <string name="get_insta_home">Gallery</string>
    <string name="get_insta_get_all_title">Download all images</string>
    <string name="get_insta_small">Small</string>
    <string name="get_insta_medium">Medium</string>
    <string name="get_insta_large">Large</string>
    <string name="get_insta_toast_downloading">Downloading…</string>
    <string name="get_insta_toast_saved">Saved:</string>
    <string name="get_insta_toast_failed">Failed!</string>
    <string name="get_insta_empty">Sorry! Unable to access images now.</string>
</resources>