<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.GetInstaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar_get_insta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/primary_color"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/menu_get_insta"
        app:title="@string/get_insta_title" />

    <LinearLayout
        android:id="@+id/get_all_get_insta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/get_all_title_get_insta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/get_insta_get_all_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/get_all_buttons_get_insta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/get_all_small_get_insta"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:background="@drawable/download_all_button"
                android:drawableLeft="@drawable/ic_baseline_get_app"
                android:drawablePadding="-10dp"
                android:enabled="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onDownloadAllSmall"
                android:paddingLeft="10dp"
                android:text="@string/get_insta_small"
                android:textColor="#FFFFFF"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/get_all_medium_get_insta"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:background="@drawable/download_all_button"
                android:drawableLeft="@drawable/ic_baseline_get_app"
                android:drawablePadding="-10dp"
                android:enabled="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onDownloadAllMedium"
                android:paddingLeft="10dp"
                android:text="@string/get_insta_medium"
                android:textColor="#FFFFFF"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/get_all_large_get_insta"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:background="@drawable/download_all_button"
                android:drawableLeft="@drawable/ic_baseline_get_app"
                android:drawablePadding="-10dp"
                android:enabled="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onDownloadAllLarge"
                android:paddingLeft="10dp"
                android:text="@string/get_insta_large"
                android:textColor="#FFFFFF"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/body_get_insta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null" />

</LinearLayout>