<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.PhotoActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/primary_color"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_photo" />

    <LinearLayout
        android:id="@+id/bottombar_photo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/primary_color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share_action_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onShare"
            android:tooltipText="@string/photo_share"
            app:backgroundTint="@color/primary"
            app:elevation="0dp"
            app:pressedTranslationZ="0dp"
            app:rippleColor="@color/ripple_button"
            app:srcCompat="?attr/actionModeShareDrawable"
            app:tint="#FFFFFF" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_action_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:onClick="toggleFavorite"
            android:tooltipText="@string/photo_favorite"
            app:backgroundTint="@color/primary"
            app:elevation="0dp"
            app:pressedTranslationZ="0dp"
            app:rippleColor="@color/ripple_button"
            app:srcCompat="@drawable/ic_baseline_favorite_border"
            app:tint="#FFFFFF" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_action_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:onClick="onDelete"
            android:tooltipText="@string/photo_delete"
            app:backgroundTint="@color/primary"
            app:elevation="0dp"
            app:pressedTranslationZ="0dp"
            app:rippleColor="@color/ripple_button"
            app:srcCompat="@drawable/ic_baseline_delete_outline"
            app:tint="#FFFFFF" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>